--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "es5",
         "module": "commonjs",
         "moduleResolution": "node",
-        "outDir": "/dist",
+        "outDir": "/home/bitnami/sketchia_api/dist",
         "rootDir": ".",
         "sourceMap": true,
         "declaration": true,
