--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@sentry/node": "^7.21.1",
     "@sentry/profiling-node": "^0.0.12",
     "@sentry/tracing": "^7.21.1",
-    "@supabase/supabase-js": "^2.0.5",
     "@types/compression": "^1.7.2",
     "@types/csurf": "^1.11.2",
     "compression": "^1.7.4",
@@ -35,7 +34,9 @@
     "csurf": "^1.11.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase": "^9.14.0",
     "helmet": "^6.0.0",
+    "node-cache": "^5.1.2",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4"
