--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "firebase": "^9.14.0",
+    "fresh": "^0.5.2",
     "helmet": "^6.0.0",
     "node-cache": "^5.1.2",
     "nodemon": "^2.0.20",
@@ -42,6 +43,7 @@
     "typescript": "^4.8.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.14"
+    "@types/express": "^4.17.14",
+    "@types/fresh": "^0.5.0"
   }
 }
